# ai-native-team-scanner

./: .cursorrules  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CICD_DETECTION_STRATEGY.md  CLAUDE.md  DEVELOPMENT.md  FIXES_APPLIED.md  LICENSE  MATURITY_MODEL.md  METHODOLOGY.md  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  ROADMAP.md  SESSION_SUMMARY_2026-03-12.md  SIGNALS.md  VISION.md  ai_native_dashboard.jsx  ai_native_test_cases.md  fix-all-ci.sh  fix-formatting.sh  pyproject.toml  repos.txt  requirements-dev.txt  requirements.txt  session_summary.md  verify-fixes.sh
.github/workflows/: ci.yml
config/: thresholds.json
results/: aider-scan.md  aints.md  aints_v2.md  aints_v3.md  aints_v4.md  batch_report.md  cline.md  kenjudy-pdca.md  nwave_assessment_report.md  vercel_ai.md  vercel_ai_phase1.md  vscode_python.md
src/scanner/: __init__.py  analyzer.py  batch.py  cli.py  detectors.py  gap_analysis.py  github_client.py  models.py  reporter.py  scoring.py
tests/: __init__.py  test_analyzer.py  test_batch.py  test_cicd_enhanced.py  test_cli.py  test_composite_scoring.py  test_detectors.py  test_detectors_new.py  test_gap_analysis.py  test_github_client.py  test_report_quality.py  test_reporter.py  test_scanner.py  test_scoring.py  test_scoring_fix.py  test_single_contributor_scoring.py
tests/fixtures/: sample_repos.json
